--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -998,7 +998,7 @@
             }
 
             const { ajaxCall_WithGzipMe } = GENERAL.FETCH_DATA;
-            ajaxCall_WithGzipMe('GetPatients_slim', JSON.stringify({ isActive: true }), getPatients_slim_SCB, getPatients_slim_ECB);//, false
+            ajaxCall_WithGzipMe('GetPatients_slim', JSON.stringify({ isActive: true }), getPatients_slim_SCB, getPatients_slim_ECB, false);
         }
 
         //OLD AND SLOW WAY TO GET PATIENTS FOR AUTO COMPLETE ↓ disabled by Yogev
