patient is back to be editable

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -901,7 +901,8 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="اسم شخصي First Name" class="col-sm-2 control-label">שם פרטי&nbsp;</label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientFirstName" name="patientFirstName" type="text" class="form-control" disabled>
+                                                        <input id="patientFirstName" name="patientFirstName" type="text" class="form-control">
+                                                        <!--disabled  -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -909,7 +910,8 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="اسم العائلة  Last Name" class="col-sm-2 control-label">שם משפחה&nbsp;</label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientLastName" name="patientLastName" type="text" class="form-control" disabled>
+                                                        <input id="patientLastName" name="patientLastName" type="text" class="form-control">
+                                                        <!-- disabled -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -919,7 +921,8 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="Patient name in english" class="col-sm-2 control-label">שם באנגלית&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientEnglishName" name="patientEnglishName" type="text" class="form-control"  disabled>
+                                                        <input id="patientEnglishName" name="patientEnglishName" type="text" class="form-control">
+                                                        <!-- disabled -->
                                                     </div>
                                                 </div>
                                             </div>
