--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -823,6 +823,8 @@
             $('#minute').prop('disabled', false);
             $('#hour').prop('disabled', false);
             $('#dateRide').prop('disabled', false);
+            $('#afterNoon').prop('disabled', false);
+
         }
 
         function returnRide() {
