fixing dealing with time-zone change GMT+2 <--> GMT+3
disable the code in the server and change 1 line in the client

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -399,7 +399,7 @@
                         Minute = 14;
                         hourForPush = "אחה\"צ"
                     }
-                    var date = new Date(Year, Month, Day, Hour, Minute);
+                    var date = new Date(Year, Month, Day, Hour, Minute).toUTCString();
                     var func = arr_customer.func;
                     //if (!flagFirstOne) {
                     //    func = "edit";
