--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -2735,17 +2735,25 @@
 
                         <div>
                             <!--<hr />-->
-                            <div class="text-right m-t-30 row">
-                                <button data-toggle="tooltip" title="Save  حفظ" type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>&nbsp שמירה</button>
+                            <div class="text-right m-r-15 row">
+                                <div class="col-sm-12">
+                                    <button data-toggle="tooltip" title="" type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5" data-original-title="Save  حفظ"><i class="ti-save m-r-5"></i>&nbsp; שמירה</button>
+                                </div>
+                                <div class="col-sm-12">
+
+                                    <button type="button" onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5"><i data-toggle="tooltip" data-placement="bottom" title="" class="ti-back-right m-r-5" data-original-title="عودة  Back"></i>&nbsp; חזרה</button>
+                                </div>
+
                             </div>
                         </div>
-                        <div class="row m-l-10 m-r-10">
+                        <!--<div class="row m-l-10 m-r-10">
                             <div class="col-sm-12 text-center">
-                                <br />
-                                <br />
-                                <button type="button" onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5"> חזרה לניהול ההסעות שלי&nbsp<i class="ti-back-right m-r-5"></i></button>
+                                <button type="button" onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5"> חזרה&nbsp<i class="ti-back-right m-r-5"></i></button>
                             </div>
-                        </div>
+                            <div class="col-sm-12 text-center">
+                                <button type="button" onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5"><i data-toggle="tooltip" data-placement="bottom" title="" class="ti-back-right m-r-5" data-original-title="عودة  Back"></i>&nbsp; חזרה</button>
+                            </div>
+                        </div>-->
 
                     </form>
 
