--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -158,6 +158,8 @@
                     $("#rp_pil_vls_per_month").click(on_report_click);
                     $("#rp_pil_vl_ride_month").click(on_report_click);
                     $("#rp_pil_vl_ride_recent_period").click(on_report_click);
+                    $("#rp_center_daily_by_month").click(on_report_click);
+ 
 
 
 
@@ -260,6 +262,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר המתנדבים המסיעים פר חודש</a></li>
+                                        <li><a class="report_link_cls" id="rp_center_daily_by_month"> מרכז תיאום - מבט יומי</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -397,7 +400,19 @@
                                     <tbody></tbody>
                                 </table>
                             </div>
-                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
+                            <div id="div_table_center_daily_by_month" style="display:none" class="card-box table-responsive">
+                                <table id="table_center_daily_by_month" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Day" class="timeCustomWidth">יום</th>
+                                            <th title="Patients" class="timeCustomWidth">חולים</th>
+                                            <th title="Volunteers" class="timeCustomWidth">מתנדבים</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                             </div>
                             <br />
